<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_container"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_time_report_detail_padding"
    android:paddingTop="@dimen/activity_time_report_detail_padding"
    android:paddingRight="@dimen/activity_time_report_detail_padding">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/TimeReportHeaderTextStyle"
                android:text="@string/tm_hr_time_report_detail_project_header" />

            <TextView
                android:id="@+id/tvTimeReportDetailSelectedProject"
                style="@style/TimeReportPickerTextStyle" />


            <TextView
                style="@style/TimeReportHeaderTextStyle"
                android:text="@string/tm_hr_time_report_detail_task_header" />

            <TextView
                android:id="@+id/tvTimeReportDetailSelectedTask"
                style="@style/TimeReportPickerTextStyle" />

            <EditText
                android:id="@+id/edTimeReportDetailDescription"
                style="@style/TimeReportDetailDescriptionInputStyle"
                android:hint="@string/tm_hr_time_report_detail_description_hint" />

            <TextView
                android:id="@+id/tvTimeReportDetailDescriptionError"
                android:text="@string/tm_hr_time_report_detail_description_empty_error"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                style="@style/TimeReportHeaderTextStyle"
                android:text="@string/tm_hr_time_report_detail_time_spent_header" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/btnTimeReportDetailDefaultTimeFifteenMinutes"
                    style="@style/TimeReportDetailDefaultTimeButtonStyle"
                    android:text="@string/tm_hr_time_report_detail_default_time_fifteen_minutes" />

                <Space
                    android:layout_width="@dimen/activity_time_report_detail_default_time_grid_offset"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/btnTimeReportDetailDefaultTimeThirtyMinutes"
                    style="@style/TimeReportDetailDefaultTimeButtonStyle"
                    android:text="@string/tm_hr_time_report_detail_default_time_thirty_minutes" />

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/activity_time_report_detail_default_time_grid_offset" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/btnTimeReportDetailDefaultTimeOneHour"
                    style="@style/TimeReportDetailDefaultTimeButtonStyle"
                    android:text="@string/tm_hr_time_report_detail_default_time_one_hour" />

                <Space
                    android:layout_width="@dimen/activity_time_report_detail_default_time_grid_offset"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/btnTimeReportDetailDefaultTimeEightHours"
                    style="@style/TimeReportDetailDefaultTimeButtonStyle"
                    android:text="@string/tm_hr_time_report_detail_default_time_eight_hours" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_time_report_detail_default_time_grid_offset">

                <EditText
                    android:id="@+id/edTimeReportDetailTime"
                    style="@style/TimeReportDetailTimeInputStyle" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:orientation="vertical"/>

            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>