<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_time_report_detail_padding"
    android:paddingRight="@dimen/activity_time_report_detail_padding">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingTop="@dimen/activity_time_report_detail_padding"
        android:paddingBottom="@dimen/activity_time_report_bottom_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/TimeReportHeaderTextStyle"
                android:text="@string/tm_hr_time_report_detail_project_header" />

            <TextView
                android:id="@+id/tvTimeReportDetailSelectedProject"
                style="@style/TimeReportPickerTextStyle" />

            <TextView
                style="@style/TimeReportHeaderTextStyle"
                android:layout_marginTop="@dimen/activity_time_report_header_top_offset"
                android:text="@string/tm_hr_time_report_detail_task_header" />

            <TextView
                android:id="@+id/tvTimeReportDetailSelectedTask"
                style="@style/TimeReportPickerTextStyle" />

            <EditText
                android:id="@+id/edTimeReportDetailDescription"
                style="@style/TimeReportDetailDescriptionInputStyle"
                android:layout_marginTop="@dimen/activity_time_report_detail_description_top_offset"
                android:hint="@string/tm_hr_time_report_detail_description_hint" />

            <TextView
                android:id="@+id/tvTimeReportDetailDescriptionError"
                style="@style/TimeReportDetailDescriptionErrorTextStyle"
                android:text="@string/tm_hr_time_report_detail_description_empty_error" />

            <TextView
                style="@style/TimeReportHeaderTextStyle"
                android:text="@string/tm_hr_time_report_detail_time_spent_header" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/btnTimeReportDetailDefaultTimeFifteenMinutes"
                    style="@style/TimeReportDetailDefaultTimeButtonStyle"
                    android:text="@string/tm_hr_time_report_detail_default_time_fifteen_minutes" />

                <Space
                    android:layout_width="@dimen/activity_time_report_detail_default_time_grid_offset"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/btnTimeReportDetailDefaultTimeThirtyMinutes"
                    style="@style/TimeReportDetailDefaultTimeButtonStyle"
                    android:text="@string/tm_hr_time_report_detail_default_time_thirty_minutes" />

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/activity_time_report_detail_default_time_grid_offset" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/btnTimeReportDetailDefaultTimeOneHour"
                    style="@style/TimeReportDetailDefaultTimeButtonStyle"
                    android:text="@string/tm_hr_time_report_detail_default_time_one_hour" />

                <Space
                    android:layout_width="@dimen/activity_time_report_detail_default_time_grid_offset"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/btnTimeReportDetailDefaultTimeEightHours"
                    style="@style/TimeReportDetailDefaultTimeButtonStyle"
                    android:text="@string/tm_hr_time_report_detail_default_time_eight_hours" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_time_report_detail_default_time_grid_offset">

                <EditText
                    android:id="@+id/edTimeReportDetailTime"
                    style="@style/TimeReportDetailTimeInputStyle" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="@drawable/bg_increase_reduse_buttons_stroke"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/btnTimeReportDetailIncreaseTime"
                        style="@style/TimeReportDetailChangeTimeValueButtonStyle"
                        android:src="@drawable/ic_time_plus" />

                    <View
                        android:layout_width="@dimen/activity_time_report_detail_change_time_buttons_size"
                        android:layout_height="@dimen/activity_time_report_detail_small_border_width"
                        android:background="@color/color_time_report_detail_input_border_color" />

                    <ImageView
                        android:id="@+id/btnTimeReportDetailReduceTime"
                        style="@style/TimeReportDetailChangeTimeValueButtonStyle"
                        android:src="@drawable/ic_time_minus" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/activity_time_report_detail_actions_bottom_offset"
        app:layout_anchorGravity="bottom">

        <TextView
            android:id="@+id/btnTimeReportDetailStartTimer"
            style="@style/TimeReportDetailSecondaryButtonStyle"
            android:text="@string/tm_hr_time_report_detail_start_timer" />

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/btnTimeReportDetailSave"
            style="@style/TimeReportDetailPrimaryButtonStyle"
            android:text="@string/tm_hr_time_report_detail_save" />
    </LinearLayout>

</FrameLayout>