<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="68dp"
        android:layout_height="54dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo_tm" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:fontFamily="@font/raleway_extrabold"
            android:text="@string/login_techmagic"
            android:textColor="@color/pine_green"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_regular"
            android:text="@string/login_time_hr"
            android:textColor="@color/oil"
            android:textSize="25sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="82dp"
        android:layout_marginRight="35dp"
        android:fontFamily="@font/open_sans_regular"
        android:gravity="center"
        android:text="@string/login_hint"
        android:textColor="@color/oil"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@color/turquoise"
            android:elevation="5dp"
            android:fontFamily="@font/raleway_extrabold"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/login_google_sign_in"
            android:textColor="@color/colorWhite" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignLeft="@id/tvSignIn"
            android:layout_alignRight="@id/tvSignIn"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:indeterminate="true"
            tools:ignore="RtlHardcoded" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="1dp"
        android:scaleType="fitXY"
        android:src="@drawable/bg_login_shadow" />

    <TextView
        android:id="@+id/tvCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_regular"
        android:textColor="@color/dark_gray"
        android:textSize="11sp"
        tools:text="@string/login_copyright" />

</LinearLayout>