<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvLoginInfo"
    style="@style/CardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorCardViewBgGrey"
    tools:showIn="@layout/activity_edit_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:splitMotionEvents="false">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tm_hr_edit_profile_activity_section_login_info"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilChangeEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:hint="@string/tm_hr_login_activity_hint_email"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/etChangeEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorBlack" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tm_hr_login_activity_hint_password"
            android:textColorHint="@color/colorAccent"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/colorBlack" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/cbCanSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tm_hr_edit_profile_activity_text_can_sign_in"
            android:visibility="gone" />

    </LinearLayout>

</android.support.v7.widget.CardView>