<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llForgotPass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilForgotPassEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/tm_hr_login_activity_hint_email"
        android:textColorHint="@color/colorAccent">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent" />

    </android.support.design.widget.TextInputLayout>

    <FrameLayout
        android:id="@+id/flSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorGreenButton">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@null"
            android:drawableLeft="@drawable/ic_mail_outline_white"
            android:drawableStart="@drawable/ic_mail_outline_white"
            android:gravity="center"
            android:text="@string/tm_hr_login_activity_text_send"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </FrameLayout>

    <TextView
        android:id="@+id/tvGoToSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:padding="@dimen/activity_text_padding_top"
        android:text="@string/tm_hr_login_activity_text_go_to_sign_in"
        android:textColor="@color/colorPrimaryDark" />

</LinearLayout>